# chatcurse

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  go.sh
lib/qrcodegen/: CMakeLists.txt  demo.cpp  qrcodegen.cpp  qrcodegen.hpp
src/: chatcurse.cc  event_types.h  global.cc  global.h  layout.cc  layout.h  process_input.cc  process_input.h  tg.cc  tg.h  utils.cc  utils.h
